--- a/ui/src/pages/Home/home.css
+++ b/ui/src/pages/Home/home.css
@@ -7,12 +7,8 @@
   background: #ffa4a4;
 }
 
-.big-logo {
-  transform: scale(2);
-  margin-left: 70px;
-}
-
 .nav-link {
+  font-family: "GT Maru Mega";
   color: white;
   text-decoration: none;
   font-size: 30px;
